# henri

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.claude/commands/: commit.md
.github/workflows/: ci.yml  release.yml
.henri/commands/: check.md  commit.md  fix.md  review.md  test.md
docs/: configuration.md
src/: auth.rs  chat.rs  commands.rs  compaction.rs  completion.rs  config.rs  custom_commands.rs  diff.rs  display.rs  error.rs  history.rs  landlock.rs  lib.rs  llm.rs  main.rs  output.rs  prompt.rs  providers.rs  services.rs  session.rs  skills.rs  sse.rs  syntax.rs  upgrade.rs  usage.rs  utils.rs  version.rs
src/auth/: mod.rs
src/cli/: clipboard.rs  completion_menu.rs  cursor_blink.rs  editor.rs  history.rs  image_preview.rs  input.rs  listener.rs  markdown.rs  menus.rs  mod.rs  prompt.rs  render.rs  slash_menu.rs  spacing.rs  style.rs  terminal.rs
src/lsp/: mod.rs
src/mcp/: mod.rs
src/prompts/: antigravity.md  build-agents-md.md  claude-code-system-prompt.md  git.md  mod.rs  system.md  todo.md
src/provider/: anthropic.rs  antigravity.rs  copilot.rs  mod.rs  model_utils.rs  openai.rs  openai_compat.rs  openrouter.rs  transaction_log.rs
src/provider/openai/: gpt-5.1-codex-max_prompt.md  gpt_5_1_prompt.md  gpt_5_codex_prompt.md
src/provider/zen/: anthropic.rs  gemini.rs  mod.rs  responses.rs
src/tools/: bash.rs  fetch.rs  file_delete.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  list_dir.rs  mod.rs  sandbox.rs  todo.rs
src/tui/: app.rs  clipboard.rs  commands.rs  draw.rs  events.rs  input.rs  layout.rs  markdown.rs  menus.rs  messages.rs  mod.rs  models.rs  render.rs  selection.rs  settings.rs  syntax.rs  syntax_treesitter.rs  thinking_mode.rs
