[package]
name = "henri"
version = "0.5.0"
edition = "2024"
license = "MIT"
rust-version = "1.88.0"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "color"] }
colored = "3"
crossterm = { version = "0.29", features = ["event-stream", "libc"] }
dirs = "6.0.0"
futures = "0.3"
inquire = "0.9"
open = "5"
rand = "0.9"
sha2 = "0.10"
tempfile = "3.24.0"
terminal_size = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "process", "net", "signal"] }
toml = "0.9"
url = "2.5"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "v7"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
unicode-width = "0.2"
rmcp = { version = "0.14", features = ["client", "transport-child-process"] }
glob = "0.3"
htmd = "0.5"
landlock = "0.4"
lsp-types = "0.97"
walkdir = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
similar = "2"

[dev-dependencies]
