[package]
name = "henri"
version = "0.6.0"
edition = "2024"
license = "MIT"
rust-version = "1.88.0"
description = "An agentic AI coding assistant for the terminal"
repository = "https://github.com/jasonish/henri"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "color"] }
colored = "3"
crossterm = { version = "0.29", features = ["event-stream", "libc"] }
dirs = "6.0.0"
futures = "0.3"
inquire = "0.9"
rand = "0.10"
sha2 = "0.10"
tempfile = "3.25.0"
terminal_size = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "process", "net", "signal"] }
toml = "1.0"
url = "2.5"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "v7"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
unicode-width = "0.2"
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
htmd = "0.5"
landlock = "0.4"
lsp-types = "0.97"
walkdir = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
similar = "2"

[dev-dependencies]
